--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:               🌱 oldwinterの数字花园
+title:               Yuxiang's Notepage
 include:             ['_pages']
 exclude:             ['_includes/notes_graph.json', '_notes/.github','_notes/.obsidian']
 # You may need to change the base URL depending on your deploy configuration.
