--- a/_config.yml
+++ b/_config.yml
@@ -143,12 +143,12 @@ theme:
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
-# header_pages:
-#   - index.html
-#   - archives.html
-#   - categories.html
-#   - tags.html
-#   - about.md
+header_pages:
+   - index.md
+   - archives.md
+   - categories.md
+   - tags.md
+   - about.md
 
 # Page default value
 # defaults:
