--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "_notes"]
-	path = _notes
+[submodule "_posts"]
+	path = _posts
 	url = https://github.com/Wanyuxiang-code/obsidian_notes.git
