--- a/_config.yml
+++ b/_config.yml
@@ -236,10 +236,6 @@ header_pages:
 #   theme: "github-light"
 #   follow_site_theme: true
 
-collections:
-  notes:
-    output: true
-    permalink: /:slug
 
 sass:
   sass_dir:          _sass
@@ -248,6 +244,6 @@ sass:
 
 defaults:
   - scope:
-      path: "_notes/**/*.md"
+      path: "_posts/**/*.md"
     values:
       layout: "post"
