--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "_posts"]
-	path = _posts
+[submodule "my_posts"]
+	path = my_posts
 	url = https://github.com/Wanyuxiang-code/obsidian_notes.git
