--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "my_posts"]
-	path = my_posts
+[submodule "_posts"]
+	path = _posts
 	url = https://github.com/Wanyuxiang-code/obsidian_notes.git
