--- a/_config.yml
+++ b/_config.yml
@@ -171,6 +171,7 @@ header_pages:
    - index.md
    - archives.html
    - categories.html
+   - articles.html
    - tags.html
    - about.html
 
@@ -263,3 +264,5 @@ defaults:
       path: "_posts/**/*.md"
     values:
       layout: "post"
+
+
